# Rust-Axum-Todo-App

./: Cargo.toml  links.http
src/: database.rs  main.rs  todos.rs
static/: index.html  scripts.js  styles.css
