[package]
name = "Rust-Web-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = {version = "1.41.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.213", features = ["derive"]}
sqlx = {version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"]}
